# http-service-processing-files

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
http-service-processing-files/src/: __init__.py  app.py
http-service-processing-files/templates/: index.html
http-service-processing-files/tests/: test_service.py
src/: __init__.py  app.py  tests.py
src/tests_case/: test_data.csv
templates/: sorted_data.html
