[tool.poetry]
name = "http-service-processing-files"
version = "1.0.0"
description = ""
authors = ["Danila Gusakov <danila.gusakov@yandex.ru>"]
packages = [{ include = "http-service-processing-files" }]

[tool.pytest.ini_option]
minversion = "6.0"
testpaths = [
    "http-service-processing-files/tests"
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
flask = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-project = "http-service-processing-files.src.app:main"